[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/images/menus and ui/inventory bg.png" type="Texture" id=1]
[ext_resource path="res://fonts/Sugar Snow.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/Inventory.gd" type="Script" id=3]
[ext_resource path="res://assets/images/menus and ui/back icon.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[node name="Inventory" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 540, 960 )
texture = ExtResource( 1 )

[node name="BackButton" type="TextureButton" parent="."]
margin_left = 807.0
margin_top = 1654.0
margin_right = 1112.0
margin_bottom = 1925.0
texture_normal = ExtResource( 4 )

[node name="InventoryTitle" type="Label" parent="."]
margin_right = 1080.0
margin_bottom = 230.0
custom_fonts/font = SubResource( 1 )
text = "MY STUFF"
align = 1
valign = 1

[node name="TankMusic" type="AudioStreamPlayer" parent="."]

[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
